[package]
name = "simple-layer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
env_logger = "0.10.0"
iced_tiny_skia = { git = "https://github.com/iced-rs/iced", version = "0.1.0" }
tiny-skia = "0.9"
smithay-client-toolkit = { version = "0.17.0", path = "../client-toolkit" }
xkbcommon = "0.5.0"
